# xrizer

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  rust.yml  ubuntu.dockerfile
fakexr/: Cargo.toml
fakexr/src/: lib.rs  monado_xdev.rs  vulkan.rs
macros/: Cargo.toml
macros/src/: lib.rs
openvr/: Cargo.toml  build.rs
openvr/src/: lib.rs
resources/rendermodels/: README.md  generic_controller.obj.lz4  oculus_quest2_controller_left.obj.lz4  oculus_quest_plus_controller_left.obj.lz4  valve_controller_knu_1_0_left.obj.lz4  vive_focus3_controller_left.obj.lz4  vr_controller_vive_1_5.obj.lz4  vr_tracker_vive_3_0.obj.lz4
shaders/: Cargo.toml
shaders/src/: lib.rs
src/: applications.rs  chaperone.rs  chaperone_setup.rs  clientcore.rs  compositor.rs  debug.rs  error_dialog.rs  extended_display.rs  graphics_backends.rs  input.rs  lib.rs  misc_unknown.rs  monado.rs  openxr_data.rs  overlay.rs  rendermodels.rs  runtime_extensions.rs  screenshots.rs  settings.rs  system.rs
src/graphics_backends/: gl.rs  headless.rs  vulkan.rs
src/input/: action_manifest.rs  custom_bindings.rs  devices.rs  legacy.rs  profiles.rs  skeletal.rs  skeletal_input.rs  tests.rs
src/input/action_manifest/: actions.rs  bindings.rs  context.rs  helpers.rs
src/input/devices/: controller.rs  generic_tracker.rs  hmd.rs  tracked_device.rs
src/input/profiles/: hp_motion_controller.rs  knuckles.rs  meta_touch_plus.rs  ms_motion_controller.rs  oculus_touch.rs  oculus_touch_plus.rs  samsung_odyssey_controller.rs  simple_controller.rs  vive_controller.rs  vive_focus3.rs  vive_tracker.rs  vrlink_hand.rs
src/input/profiles/wmr/: hp_motion_controller.rs  mod.rs  ms_motion_controller.rs  samsung_odyssey_controller.rs
src/input/skeletal_input/: bin.rs  ipc.rs  mod.rs
src/runtime_extensions/: xr_mndx_xdev_space.rs
tests/input_data/: actions.json  actions_dpad_two_inputs.json  actions_malformed_paths.json  holographiccontroller.json  hpmotioncontroller.json  knuckles.json  knuckles_malformed.json  oculus.json  touch_dpad_two_inputs.json  wands.json
xbuild/: Cargo.toml  openvrpaths.vrpath.in
xbuild/src/: main.rs
