[package]
name = "xrizer"
version = "0.4.0"
edition.workspace = true
resolver = "2"
license = "GPL-3.0-or-later"
description = "XR-ize your favorite OpenVR games"
repository = "https://github.com/Supreeeme/xrizer"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[features]
default = ["monado"]
tracing = ["dep:tracy-client", "openvr/tracing"]
monado = ["dep:openxr_mndx_xdev_space"]

[workspace]
members = ["xbuild"]

[workspace.package]
rust-version = "1.85"
edition = "2024"

[workspace.lints.clippy]
all = "deny"

[patch.crates-io]
openxr = { git = "https://github.com/ralith/openxrs", rev = "d0afdd3" }
openxr-sys = { git = "https://github.com/ralith/openxrs", rev = "d0afdd3" }

[workspace.dependencies]
ash = "0.38.0"
openxr = { version = "0.19.0", features = ["static"] }
openxr-sys = { version = "0.11.0" }
slotmap = "1.0.7"
glam = "0.30.4"
log = "0.4.22"
tracy-client = "0.17.6"
derive_more = { version = "2.0.1", features = ["deref", "from", "try_into"] }

[lints]
workspace = true

[dependencies]
ash = { workspace = true }
env_logger = "0.11.5"
glam = { workspace = true }
log = { workspace = true }
openxr = { workspace = true }
openxr_mndx_xdev_space = { version = "0.1.1", optional = true }
openvr = { path = "openvr" }
paste = "1.0.15"
seq-macro = "0.3.5"
macros = { path = "macros" }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
slotmap = { workspace = true }
time = { version = "0.3.36", features = ["formatting", "local-offset", "macros"] }
tracy-client = { workspace = true, features = ["only-localhost", "demangle"], optional = true }
egui = "0.31.1"
egui-miniquad = "0.16"
miniquad = "0.4.8"
webbrowser = "1.0.5"
glutin_glx_sys = "0.6.0"
libc = "0.2.169"
derive_more = { workspace = true }
gl = "0.14.0"
obj = "0.10.2"
lz4_flex = { version = "0.12.0", default-features = false, features = ["frame"] }

[build-dependencies]
anyhow = "1.0.99"
shaders = { path = "shaders" }
vergen-gitcl = "1.0.8"

[dev-dependencies]
libloading = "0.8.5"
test-cdylib = "1.1.0"
fakexr = { path = "fakexr" }
macros = { path = "macros", features = ["test"]}
